<resources>
    <string name="app_name">TPFMassonNicolas</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Age">Age</string>
    <string name="Family_Name">Family Name</string>
    <string name="Name">Name</string>
    <string name="Join">Join</string>
    <string name="Login">Login</string>
    <string name="Cancel">Cancel</string>
    <string name="Create_Account">Create Account</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Add_Movie">Add Movie</string>
    <string name="Year_Of_Release">Year Of Release</string>
    <string name="Movie_Rating">Movie Rating</string>
    <string name="Movie_Description">Movie Description</string>
    <string name="Type">Type</string>


</resources>