<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FFE2"
    tools:context=".AddMovie">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/addmovie3" />


    <EditText
        android:id="@+id/etvNameAddMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="11"
        android:hint="@string/Name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etvTypeAddMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="11"
        android:hint="@string/Type"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etvNameAddMovie"
        app:layout_constraintStart_toStartOf="@+id/etvNameAddMovie"
        app:layout_constraintTop_toBottomOf="@+id/etvNameAddMovie" />

    <EditText
        android:id="@+id/etvYearAddMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="11"
        android:hint="@string/Year_Of_Release"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etvTypeAddMovie"
        app:layout_constraintStart_toStartOf="@+id/etvTypeAddMovie"
        app:layout_constraintTop_toBottomOf="@+id/etvTypeAddMovie" />

    <EditText
        android:id="@+id/etvMovieRatingAddMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="11"
        android:hint="@string/Movie_Rating"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etvYearAddMovie"
        app:layout_constraintStart_toStartOf="@+id/etvYearAddMovie"
        app:layout_constraintTop_toBottomOf="@+id/etvYearAddMovie" />

    <EditText
        android:id="@+id/etvMovieDescriptionAddMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="11"
        android:hint="@string/Movie_Description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etvMovieRatingAddMovie"
        app:layout_constraintStart_toStartOf="@+id/etvMovieRatingAddMovie"
        app:layout_constraintTop_toBottomOf="@+id/etvMovieRatingAddMovie" />

    <Button
        android:id="@+id/btJoinAddMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="joinAdd"
        android:text="@string/Add_Movie"
        app:layout_constraintStart_toStartOf="@+id/etvNameAddMovie"
        app:layout_constraintTop_toBottomOf="@+id/etvMovieDescriptionAddMovie" />

    <Button
        android:id="@+id/btCancelAddMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="cancelMovie"
        android:text="@string/Cancel"
        app:layout_constraintEnd_toEndOf="@+id/etvNameAddMovie"
        app:layout_constraintTop_toBottomOf="@+id/etvMovieDescriptionAddMovie" />

</androidx.constraintlayout.widget.ConstraintLayout>